--- a/contacts.html
+++ b/contacts.html
@@ -124,19 +124,21 @@
           <div class="container">
             <h1 class="title">Contact Us</h1>
             <p class="text">If you require help, please do not hesitate and feel free to reach us at email.</p>
-            <p class="text">We would be more than happy to answer your questions</p>
+            <p class="text">We would be more than happy to answer your questions.</p>
+            <p class="text">Monday through Friday 8 a.m. to 8 p.m. (Eastern)</p>
+            <p class="text">Saturday 9 a.m. to 3 p.m. (Eastern)</p>
             <div class="text text-section__df">
-              <img src="./img/mail.png" alt="" class="footer__icon">
+              <img src="./img/icons/mail.svg" alt="" class="footer__icon">
                <a href="" class="link js_website-email"></a>
             </div>
 
             <div class="text text-section__df">
-              <img src="./img/phone.png" alt="" class="footer__icon">
+              <img src="./img/icons/call.svg" alt="" class="footer__icon">
                   <a href="" class="link js_website-phone"></a>
              </div>
             
              <p class="text text-section__df">
-              <img src="./img/location.png" alt="" class="footer__icon">
+              <img src="./img/icons/pin.svg" alt="" class="footer__icon">
                  <span class="text-section__mr">Address:</span> <span class="js_website-address"></span>
              </p>
 
