--- a/cancellation.html
+++ b/cancellation.html
@@ -119,26 +119,32 @@
     </div>
 
     <main class="main bg-main">
-      <div class="text-section__wrapper white__wrapper">
-        <section class="text-section">
-          <div class="container">
-            <h1 class="title">SHIPPING POLICY</h1>
-           <p class="text bold">When can I expect to receive my shipment?</p>
-           <p class="text">Shipment will arrive in 3-5 days.</p>
-           <p class="text bold">How can I track my order?</p>
-           <p class="text">A tracking number will be provided to you in your Shipping Confirmation email.</p>
-           <p class="text bold">How can I change my Shipping Address?</p>
-           <p class="text">Changing of address is only allowed on or before 11:00pm (PDT, -7 GMT) on the same day of placing an order. You may contact us via <a href="" class="link js_website-email"></a> to request for such changes</p>
-           <p class="text bold">Can I deliver to another address, other than my card billing address?</p>
-           <p class="text">Yes, it is possible.</p>
-           <p class="text bold">How is my order shipped?</p>
-           <p class="text">The standard ground mail service is shipped via United States Postal Service First Class Mail. Packages will arrive within 3-5 business days. Please be advised that shipments are not sent out on Saturdays, Sundays, or any Holidays. We do not guarantee arrival dates or times.</p>
-        </div>
-        </section>
-    </div>
-     </main>
+        <div class="text-section__wrapper white__wrapper">
+          <section class="text-section">
+            <div class="container">
+              <h1 class="title">Cancellation of Order</h1>
+              <form>
+                <p class="text">Please fill out the information below. After completing and submitting this form, 
+                  your account will be terminated and all billing will be stopped. Once the account has been cancelled, you will receive a cancellation email confirmation.
+                </p>
+                <label class="label js_label">
+                  <input type="text" class="input js_input" data-role="required" name="email" placeholder="Email">
+                </label>
+          
+                <label class="label js_label">
+                  <input type="text" class="input js_input" data-role="required" name="phone" placeholder="Phone Number">
+                </label>
+    
+                <label class="label js_label">
+                  <input type="text" class="input js_input" data-role="required" name="orderid" placeholder="Order Number">
+                </label>
+              </form> 
+            </div>
+          </section>
+      </div>
+    </main>
 
-     <div class="footer__wrapper">
+    <div class="footer__wrapper">
  
       <div class="container">
         <footer class="footer">
