--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         <div class="container">
           <div class="hero">
         
-              <h1 class="title" id="demo3">Simply better shopping.</h1>
-            <p class="text">Online shopping is the best way to buy everything you need in two clicks.
+              <h1 class="title js_main-title" id="demo3"></h1>
+            <p class="text js_sub-title">
               </p>
               <a href="./shop.html" class="btn">my cart</a>  
            
